// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfoGroup /> should render InfoGroup with complex content 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 20px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c9.c9.c9.c9.c9 {
  background-color: hsla(0,0%,100%,1);
}

.c11.c11.c11.c11.c11 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c15.c15.c15.c15.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c16.c16.c16.c16.c16 {
  text-align: left;
  height: 20px;
  background-color: hsla(150,100%,32%,0.09);
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 8px;
  padding-left: 8px;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c14.c14.c14.c14.c14 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c19.c19.c19.c19.c19 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c22.c22.c22.c22.c22 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  opacity: 0.64;
  margin-right: 2px;
}

.c23.c23.c23.c23.c23 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c24.c24.c24.c24.c24 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  opacity: 0.64;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c12.c12.c12.c12.c12 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(211,20%,52%,0.18);
}

.c12.c12.c12.c12.c12 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c17.c17.c17.c17.c17 {
  background-color: hsla(150,100%,32%,0.09);
  border-radius: 9999px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
              <path
                d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Customer
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c8"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <div
                class="c9 c10"
                data-blade-component="avatar"
              >
                <div
                  class="c11"
                  data-blade-component="base-box"
                >
                  <div
                    class="c12"
                    color="neutral"
                  >
                    <div
                      class="c13"
                      data-blade-component="base-box"
                    >
                      <p
                        class="c14"
                        data-blade-component="text"
                      >
                        SD
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Status
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c8"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <div
                class="c15"
                data-blade-component="badge"
              >
                <div
                  class="c16 c17"
                  data-blade-component="base-box"
                >
                  <div
                    class="c18"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c19"
                      data-blade-component="text"
                    >
                      Active
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Amount
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c8"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <div
                class="c20"
                data-blade-component="amount"
              >
                <div
                  class="c21"
                  data-blade-component="base-box"
                >
                  <span
                    class="c22"
                    data-blade-component="base-text"
                    opacity="0.64"
                  >
                    ₹
                  </span>
                  <span
                    class="c23"
                    data-blade-component="base-text"
                  >
                    123,456
                  </span>
                  <span
                    class="c24"
                    data-blade-component="base-text"
                    opacity="0.64"
                  >
                    .
                    00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with custom grid template columns 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: 1fr 2fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different item orientations 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

@media screen and (min-width:768px) {

}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different item orientations 2`] = `
.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: repeat(min(4,2),1fr);
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c9.c9.c9.c9.c9 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {

}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Account Holder
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Saurabh Daware
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <dt
          class="c3"
          data-blade-component="info-item-key"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c7"
                  data-blade-component="text"
                >
                  Payment Method
                </p>
              </div>
            </div>
          </div>
        </dt>
        <dd
          class="c8"
          data-blade-component="info-item-value"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <div
                class="c6"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Credit Card
                </p>
              </div>
            </div>
          </div>
        </dd>
      </div>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different key and value alignments 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different sizes 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 2px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 14px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different sizes 2`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 18px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different sizes 3`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with different sizes 4`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 8px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 24px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with dividers 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c9.c9.c9.c9.c9 {
  grid-column: span 2;
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  border-width: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

@media screen and (min-width:320px) {
  .c9.c9.c9.c9.c9 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c9.c9.c9.c9.c9 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c9.c9.c9.c9.c9 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c9.c9.c9.c9.c9 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c9.c9.c9.c9.c9 {
    border-bottom-style: solid;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c9 c10"
      data-blade-component="divider"
      role="separator"
    />
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Status
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Completed
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with highlighting 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  border-left-color: hsla(211,20%,52%,0.18);
  border-left-style: solid;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 12px;
  gap: 4px;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 12px;
  padding-left: 0px;
  gap: 4px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  border-width: 0;
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

@media screen and (min-width:320px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c3.c3.c3.c3.c3 {
    border-left-style: solid;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3 c4"
          data-blade-component="divider"
          role="separator"
        />
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c9"
        data-blade-component="info-item-value"
      >
        <div
          class="c10"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <p
                class="c11"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c9"
        data-blade-component="info-item-value"
      >
        <div
          class="c12"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <p
                class="c11"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with icons and help text 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 20px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c9.c9.c9.c9.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Menlo",San Francisco Mono,Courier New,Roboto Mono,monospace;
  font-size: 0.625rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c11.c11.c11.c11.c11 {
  padding: 0px 4px;
  background-color: hsla(211,20%,52%,0.09);
  border-radius: 4px;
  display: inline-block;
  vertical-align: middle;
  line-height: 0rem;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
              <path
                d="M8 14C5.23858 14 3 16.2386 3 19V21C3 21.5523 3.44772 22 4 22C4.55228 22 5 21.5523 5 21V19C5 17.3431 6.34315 16 8 16H16C17.6569 16 19 17.3431 19 19V21C19 21.5523 19.4477 22 20 22C20.5523 22 21 21.5523 21 21V19C21 16.2386 18.7614 14 16 14H8Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
            <p
              class="c8"
              data-blade-component="text"
            >
              Customer information
            </p>
          </div>
        </div>
      </dt>
      <dd
        class="c9"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c10"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
            <p
              class="c8"
              data-blade-component="text"
            >
              Name of the account holder
            </p>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.31658 18.0976 8.68342 18.0976 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M5.105 10.429a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H5.105Zm6.316 0a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1H11.42ZM2 22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-1.143a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1V22Zm15.737-11.571a1 1 0 0 0-1 1v5.333a1 1 0 0 0 1 1h1.158a1 1 0 0 0 1-1v-5.333a1 1 0 0 0-1-1h-1.158Zm-5.273-9.186a1 1 0 0 0-.928 0l-9 4.714A1 1 0 0 0 2 6.843v.49a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1v-.49a1 1 0 0 0-.536-.886l-9-4.714Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
            </svg>
          </div>
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <p
                class="c7"
                data-blade-component="text"
              >
                Payment ID
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c9"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <span
                class=" c11"
                data-blade-component="code"
              >
                <code
                  class="c12"
                  data-blade-component="base-text"
                >
                  pay_MK7DGqwYXEwx9Q
                </code>
              </span>
            </div>
          </div>
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M3 4C3 3.44772 3.44772 3 4 3H13C13.5523 3 14 3.44772 14 4V5C14 5.55228 14.4477 6 15 6C15.5523 6 16 5.55228 16 5V4C16 2.34315 14.6569 1 13 1H4C2.34315 1 1 2.34315 1 4V13C1 14.6569 2.34315 16 4 16H5C5.55228 16 6 15.5523 6 15C6 14.4477 5.55228 14 5 14H4C3.44772 14 3 13.5523 3 13V4Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
              />
              <path
                clip-rule="evenodd"
                d="M11 8C9.34315 8 8 9.34315 8 11V20C8 21.6569 9.34315 23 11 23H20C21.6569 23 23 21.6569 23 20V11C23 9.34315 21.6569 8 20 8H11ZM10 11C10 10.4477 10.4477 10 11 10H20C20.5523 10 21 10.4477 21 11V20C21 20.5523 20.5523 21 20 21H11C10.4477 21 10 20.5523 10 20V11Z"
                data-blade-component="svg-path"
                fill="hsla(211, 22%, 56%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render InfoGroup with width and padding props 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  padding: 12px;
  padding-right: 20px;
  padding-left: 20px;
  margin: 0px;
  width: 400px;
  max-width: 500px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;

exports[`<InfoGroup /> should render simple InfoGroup 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  grid-template-columns: max-content 1fr;
  margin: 0px;
  row-gap: 12px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: contents;
  margin-right: 200px;
  margin-left: 200px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 0px;
  padding-left: 0px;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  min-height: 20px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    -webkit-column-gap: 48px;
    column-gap: 48px;
  }
}

<div>
  <dl
    class="c0"
    data-blade-component="info-group"
  >
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Account Holder
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Saurabh Daware
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
    <div
      class="c1"
      data-blade-component="info-item"
    >
      <dt
        class="c2"
        data-blade-component="info-item-key"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c6"
                data-blade-component="text"
              >
                Payment Method
              </p>
            </div>
          </div>
        </div>
      </dt>
      <dd
        class="c7"
        data-blade-component="info-item-value"
      >
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <div
            class="c4"
            data-blade-component="base-box"
          >
            <div
              class="c5"
              data-blade-component="base-box"
            >
              <p
                class="c8"
                data-blade-component="text"
              >
                Credit Card
              </p>
            </div>
          </div>
        </div>
      </dd>
    </div>
  </dl>
</div>
`;
